--- a/index.Rmd
+++ b/index.Rmd
@@ -4,7 +4,7 @@ subtitle: "Amusement Park injuries"
 team: "bilby"
 author:
   - "Yuheng Cui"
-  - [FILL]
+  - "Jimmy Effendy"
 date: "`r Sys.Date()`"
 output: 
   bookdown::html_document2
