--- a/index.Rmd
+++ b/index.Rmd
@@ -155,7 +155,7 @@ In summary, parents really need to pay more attention on their babies in amuseme
 
 ## Secondary question1: what is the most dangerous equipment in parks and what is the most body parts injuried?
 
-First secondary question is "what is the most dangerous equipment in parks". We count the total number of injuries by device type. Table \@ref(tab:safer-quip) shows top-10 rankings of high-risk equipment. It is not surprising that roller coaster is the equipment that causes the most injuries. 
+First secondary question is "what is the most dangerous equipment in parks". We count the total number of injuries by device type. Table \@ref(tab:safer-equip) shows top-10 rankings of high-risk equipment. It is not surprising that roller coaster is the equipment that causes the most injuries. @gutierrez reported that seven cases are related to roller coaster among eight high-profile U.S. amusement park deaths before 2016. 
 
 ```{r safer-equip}
 safer_parks %>% 
@@ -178,7 +178,15 @@ safer_parks %>%
 
 ```
 
+Fig \@ref(fig:sq1-wordcloud) shows the frequent words in injury description. Ignoring the words "injury" and "pain", we can see that head, neck knee, ankle, shoulder frequently appear.
+
+In summary, amusement parks should pay extra attention on roller coaster because unlike other subjects roller coaster's failure can cause severe consequence. First, they should regularly maintain the roller coaster, in order to reduce mechanical failure. Second, train the staff and ask them to check to-do list every time launch the equipments. Third, ask visitors to follow the safety requirements. Furthermore, visitors should also protect their head, neck and shoulder. Those body parts are vulnerable and important and they are always injuried in amusement park injury cases.
+
+# Acknowledgments
+The following packages are used to produce this report:
+visdat [@visdat], dplyr [@dplyr], readr[@readr], tidyverse [@tidyverse], lubridate [@lubridate], knitr [@knitr], kableExtra [@kableExtra], tidytext [@tidytext], wordcloud [@wordcloud]
+
 
 # References
 
-visdat [@visdat]
+
