Write short paragraphs for intro and limitation (data desc)
Feel free to edit/change them

--- a/references.bib
+++ b/references.bib
@@ -100,3 +100,19 @@
     url = {https://CRAN.R-project.org/package=wordcloud},
   }
 
+  @book{saferpark,
+  url={https://ridesdatabase.org/wp-content/uploads/2020/02/Saferparks-data-description.pdf},
+  journal={Saferparks Accident Data},
+  author={Saferpark},
+  pages={2–3}
+  }
+
+  @misc{wiki,
+  title={List of amusement parks in the Americas},
+  url={https://en.wikipedia.org/wiki/List_of_amusement_parks_in_the_Americas#Texas},
+  journal={Wikipedia},
+  publisher={Wikimedia Foundation},
+  author={Wikipedia},
+  year={2020},
+  month={Aug}
+  }
