--- a/index.Rmd
+++ b/index.Rmd
@@ -36,9 +36,9 @@ safer_parks <- read_csv("https://raw.githubusercontent.com/rfordatascience/tidyt
 
 # Introduction and motivation
 
-intro: ...
+intro: Families and friends tend to spend their holidays and weekends in amusement parks. There are 25 amusement parks in Texas already [@wiki]. Indeed, amusement parks are good place for kids and young people, but there are also much news reporting accidents in amusement park, and some news are horrible. These news remind people to take care of themselves when playing. More importantly, amusement parks should reduce the probability of machenical failure and operation errors.
 
-motivation: study the injuries record, find out the risky groups. In the future, amusement parks can pay more attention on those groups and entertaining equipments. Consequently, reduce the injuries occur in amusement parks and increase the well beings of society.
+motivation: study the injury record, find out the risky groups. In the future, amusement parks can pay more attention on those groups and equipments. Consequently, reduce the injuries occur in amusement parks and increase the well beings of society.
 
 # Data description
 
@@ -50,18 +50,18 @@ The data.world dataset is about all incidents occurred at amusement parks in Tex
 vis_dat(tx_injuries)
 ```
 
-The accidents records in the Saferparks dataset, on the other hand, originated from the U.S. state and federal safety agencies regulating amusement rides (Saferparks, 2020). It has `r dim(safer_parks)[1]` observations and `r dim(safer_parks)[2]` variables. Fig \@ref(fig:quality-of-safer) shows 4 variables have too many missing values to be analysed, therefore, we ought to ignore them. **acc_date** should be converted to date variable. Although **manufacturer** has many missing values as well, we decided to keep it because it may be insightful.
-
-```{r clean,eval= FALSE}
-tx_injuries %>% 
-  select(-other, -serial_no, -injury_report_rec) %>% 
-  mutate(age = as.numeric(age),
-         injury_date = as.Date(injury_date, format = "%m/%d/%Y")) # convert to date?
-```
+The accidents records in the Saferparks dataset, on the other hand, originated from the U.S. state and federal safety agencies regulating amusement rides (Saferparks, 2020). It has `r dim(safer_parks)[1]` observations and `r dim(safer_parks)[2]` variables. Fig \@ref(fig:quality-of-safer) shows 4 variables have too many missing values to be analysed, therefore, we ought to ignore them. **acc_date** should be converted to date variable. 
 
 ```{r quality-of-safer, fig.cap = "Saferparks dataset"}
 vis_dat(safer_parks)
 ```
+
+Despite the missing value issue, the Saferparks dataset has two major limitations [@saferpark]:
+
+* The data varies widely in content and consistency, because only half of U.S states have provided accident data
+* States with stronger government oversight tend to log more accidents.
+
+After all, the dataset still provides some insights about amusement park injury, although it could not be used for predicting nation-wide patterns.
 
 # Analysis and findings
 
