--- a/reference.bib
+++ b/reference.bib
@@ -29,3 +29,33 @@
       url    = "https://data.world/amillerbernd/texas-amusement-park-accidents",
       year   = "2020 (accessed August 24, 2020)"
     }
+
+@book{tea2019,
+  title={2019 TEA/AECOM Theme Index and Museum Index},
+  author={Themed Entertainment Association, AECOM},
+  year={2019},
+  url={https://www.teaconnect.org/Resources/?id=369}
+}
+
+@article{schneider_2019,
+  title={Theme Park Attendance Crosses Half-Billion Mark for 1st Time},
+  url={https://www.usnews.com/news/best-states/florida/articles/2019-05-23/theme-park-attendance-crosses-half-billion-mark-for-1st-time},
+  journal={U.S. News},
+  author={Schneider, Mike},
+  year={2019},
+  month={May}
+}
+
+@article{WOODCOCK2019171,
+title = "Global incidence of theme park and amusement ride accidents",
+journal = "Safety Science",
+volume = "113",
+pages = "171 - 179",
+year = "2019",
+issn = "0925-7535",
+doi = "https://doi.org/10.1016/j.ssci.2018.11.014",
+url = "http://www.sciencedirect.com/science/article/pii/S0925753518311238",
+author = "Kathryn Woodcock",
+keywords = "Amusement rides, Safety, Accidents, Theme parks, Carnivals, Water parks",
+abstract = "This study describes worldwide occurrence of accidents involving amusement rides. The study compiled and classified reports in international media coverage for a one-year period, analysing event type, ride type, operation type, and regional location. Media reports provided limited detail and almost certainly omitted some events but remain the only publicly available data on a global scale. Over the year, 182 accident events were reported, from 38 countries, of which 51 events involved a fatality. Mechanical rides and roller coasters were involved in 87 events. Fixed-site rides (amusement and theme parks), mobile rides, and waterparks were involved with a similar number of cases. The most common event type with fixed-site and mobile rides was ride malfunction (63 cases). In waterparks, drowning or near-miss of drowning was most common (27 cases). Just 11 reports involved improper rider action, 12 involved failure of reasonable action, and 11 involved medical conditions or reactions. Occurrence as a proportion of attendance was highest in Latin America, predominantly involving mechanical non-tracked rides; water attractions predominated in North America. Lower prevalence of malfunctions in North America suggests value of professional development for mechanics and inspectors and strong regulation to promote international safety standards."
+}
