--- a/index.Rmd
+++ b/index.Rmd
@@ -41,14 +41,14 @@ intro: Families and friends tend to spend their holidays and weekends in amuseme
 https://www.usnews.com/news/best-states/florida/articles/2019-05-23/theme-park-attendance-crosses-half-billion-mark-for-1st-time
 
 
-motivation: study the injury record, find out the risky groups. In the future, amusement parks can pay more attention on those groups and equipments. Consequently, reduce the injuries occur in amusement parks and increase the well beings of society.
+motivation: Through studying the injury record, find out the patterns within injuried groups. The patterns refer to the high-risk groups, high-risk equipment and seasonal trend of injuries. We believe amusement park must make the effort to reduce the incidents; the effort refers to maintaining equipments, training staff and monitoring visitors. At same time, visitors should also follow the parks regulations and equipment instructions. After all, visitors should be responsible for their own safeties in the first place. Reduce the injuries occur in amusement parks and increase the well beings of society. 
 
 Encouraging exploration of other sections:
 
 Data sources:
 The datasets are downloaded from [here](https://github.com/rfordatascience/tidytuesday/tree/master/data/2019/2019-09-10) from GitHub. There are two datasets provided in the repository; one originated from [data.world](https://data.world/amillerbernd/texas-amusement-park-accidents) and another from [Safer Parks database](https://ridesdatabase.org/saferparks/data/).
 
-*data limitation*
+*Data limitation*
 
 Despite the missing value issue, the Saferparks dataset has two major limitations [@saferpark]:
 
@@ -77,7 +77,7 @@ vis_dat(safer_parks)
 tx_injuries %>% 
   select(-other, -serial_no, -injury_report_rec) %>% 
   mutate(age = as.numeric(age),
-         injury_date = as.Date(injury_date, format = "%m-%d-%Y")) # convert to date?
+         injury_date = as.Date(injury_date, format = "%m/%d/%Y")) # convert to date?
 ```
 
 # Analysis and findings
@@ -88,31 +88,46 @@ The primary question in this report is to find out the high-risk group. Conseque
 
 First, we need to clean the data. The missing values in age and gender is removed and the variable type is converted from character to numeric. Second, we unify the records in gender because some observations record gender male as 'M' while others record as 'm'. Third, calculate the percentage of each age group.
 
-```{r tx-pm1, fig.cap = "Line plot for age"}
+```{r tx-pm1, fig.cap = "Bar plot for age"}
 tx_gender_age <- tx_injuries %>%
   # remove missing values in gender
   filter(!is.na(gender)) %>% 
-  # remove missing values in age
-  filter(!is.na(age)) %>% 
   mutate(gender = recode(gender,
                          "m" = "M",
-                         "f" = "F")) %>% # unify gender record
-  mutate(age = as.numeric(age))
+                         "f" = "F",
+                         "n/a" = "unknown",
+                         "N/A" = "unknown")) %>% # unify gender record
+  mutate(age = as.numeric(age)) %>% 
+    # remove missing values in age
+  filter(!is.na(age))
+
   
    
 
 tx_ob <- nrow(tx_gender_age)
   
-tx_gender_age %>% 
-  count(age, sort = FALSE) %>% 
-  mutate(percentage = n*100/tx_ob) %>% 
-  ggplot(aes(x = age, y = percentage)) + 
-  geom_line() +
-  geom_hline(yintercept = 1, color = 'red')
+# tx_gender_age %>% 
+#   count(age, sort = FALSE) %>% 
+#   mutate(percentage = n*100/tx_ob) %>% 
+#   ggplot(aes(x = age, y = percentage)) + 
+#   geom_line() +
+#   geom_hline(yintercept = 1, color = 'red') # This line plot is removed.
 
+tx_gender_age%>% 
+  group_by(gender, age) %>% 
+  count(gender,age) %>% 
+  ungroup() %>% 
+  mutate(percent = round(n*100/tx_ob, 2)) %>% 
+  select(-n) %>% 
+  ggplot(aes(x = age, y = percent, fill = gender)) +
+  geom_bar(stat="identity")+
+  # geom_text(aes(y=label_ypos, label=percent), vjust=1.6, 
+  #           color="white", size=3.5)+
+  # scale_fill_brewer(palette="Paired")+
+  theme_minimal()
 ```
 
-Fig \@ref(fig:tx-pm1) illustrates the distribution of injuried ages. Surprisingly, the most injuried were babies. The red line indicate 1 percent. Below this line, we believe the injuried cases were relatively rare.
+Fig \@ref(fig:tx-pm1) illustrates the distribution of injuried ages and gender. Surprisingly, the most injuried were babies. (more...)
 
 
 ```{r tx-pm1-tab}
@@ -139,6 +154,8 @@ tx_gender_age%>%
   kable(caption = "Top 10 risky group by gender in amusement parks in Texas") %>% 
   kable_styling(bootstrap_options = c("striped", "hover"))
 ```
+
+
 
 ```{r tx-pm1-pct, include = FALSE}
 tx_kid <- tx_gender_age %>% 
